@@ -1,3 +1,13 @@
+2011-06-28  Reinhard Max  <max@suse.de>
+
+	* unix/tclUnixSock.c (CreateClientSocket): Fix and simplify
+	posting of the writable fileevent at the end of an asynchronous
+	connection attempt. Improve comments for some of the trickery
+	around [socket -async]. [Bug 3325339]
+	
+	* tests/socket.test: Adjust tests to the async code changes. Add
+	more tests for corner cases of async sockets.
+
 2011-06-22  Andreas Kupries  <andreask@activestate.com>
 
 	* library/platform/pkgIndex.tcl: Updated to platform 1.0.10. Added
